# TasteByte_ERP

./: .editorconfig  .env.docker.example  .gitignore  Makefile  README.md  docker-compose.yml
android/: gradlew  (+2 more)
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend/.next/: trace  trace-build
backend/migrations/: 001_foundation.sql  002_fi_chart_of_accounts.sql  003_fi_journal.sql  004_mm_materials.sql  005_mm_inventory.sql  006_sd_sales.sql  007_pp_production.sql  008_hr_employees.sql  009_wm_warehouse.sql  010_qm_quality.sql  011_co_controlling.sql  012_seed_data.sql  013_rbac_permissions.sql  014_lowcode_platform.sql  015_lowcode_permissions.sql  016_lowcode_workflow.sql  017_lowcode_seed.sql  018_workflow_infrastructure.sql  019_lowcode_phase1_extensions.sql  020_add_workflow_operation_type.sql  021_hierarchical_rbac.sql  022_rbac_indexes.sql  023_co_auto_posting.sql  024_customer_number_range.sql  025_account_lockout.sql  026_refresh_tokens.sql  027_soft_delete_material.sql  028_missing_indexes.sql  029_notifications.sql  030_cross_module_integration.sql  031_module_linked_operations.sql  032_demo_seed_data.sql  033_lowcode_demo_data.sql  034_lowcode_backend_fixes.sql  035_infrastructure.sql  036_q1q2_features.sql  037_q3q4_features.sql  038_business_operations_via_lowcode.sql  039_lowcode_improvements.sql  040_supply_chain_core.sql  (+5 more)
backend/operations/hr/: hr-leave.yaml
backend/src/: lib.rs  main.rs  routes.rs
backend/tests/: api_auth.rs  api_co.rs  api_fi.rs  api_health.rs  api_hr.rs  api_mm.rs  api_pp.rs  api_qm.rs  api_sd.rs  api_wm.rs
(+694 files in other folders)
